# python_advanced

./: Ch00 Introduction.ipynb  Ch00 Introduction_solution.ipynb  Ch00 Introduction_solution.py  Ch01 A Gentle Introduction to Object-Oriented Programming.ipynb  Ch01 A Gentle Introduction to Object-Oriented Programming_solution.ipynb  Ch02 Error Handling and Debugging.ipynb  Ch03.1 Case kijkcijfers.ipynb  Ch03.2 Case kijkcijfers.py  Ch03.2 Case kijkcijfers_solution.py  Ch04-excel.ipynb  Ch05-Local-LLM.ipynb  Ch06-Python_Ecosysteem.ipynb  demo.py  logger.py  pyproject.toml
