[project]
name = "python-advanced"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.12.1",
    "google-generativeai>=0.8.6",
    "numpy>=2.4.4",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.2",
    "pytz>=2026.1.post1",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
]
