[project]
name = "python-advanced"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=0.30.0,<1",
    "langchain-groq>=1.1.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.4",
    "openmeteo-requests>=1.7.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pytz>=2026.1.post1",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
    "transformers>=5.12.1",
]
